src/test/examples/invalid/semanticErr/expressions/IncompatibleTypesbinOpExpr.wacc

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int a = false + 7 ;
  bool b = true || 7 ;
  bool c = 'a' > 8
end
